package com.yonatankarp.decorator

/**
 * Interface for trolls.
 */
interface Troll {
    val attackPower: Int
    fun attack()

    fun fleeBattle()
}
